@@ -85,6 +85,7 @@ const QString exp_F   = QStringLiteral("exp");
 const QString sqrt_F  = QStringLiteral("sqrt");
 const QString sign_F  = QStringLiteral("sign");
 const QString rint_F  = QStringLiteral("rint");
+const QString r2cm_F  = QStringLiteral("r2cm");
 const QString abs_F   = QStringLiteral("abs");
 const QString min_F   = QStringLiteral("min");
 const QString max_F   = QStringLiteral("max");
@@ -92,13 +93,41 @@ const QString sum_F   = QStringLiteral("sum");
 const QString avg_F   = QStringLiteral("avg");
 const QString fmod_F  = QStringLiteral("fmod");
 
-const QStringList builInFunctions = QStringList() << degTorad_F << radTodeg_F
-                                                  << sin_F  << cos_F   << tan_F  << asin_F  << acos_F  << atan_F
-                                                  << sinh_F << cosh_F  << tanh_F << asinh_F << acosh_F << atanh_F
-                                                  << sinD_F  << cosD_F   << tanD_F  << asinD_F  << acosD_F  << atanD_F
-                                                  << log2_F << log10_F << log_F  << ln_F    << exp_F   << sqrt_F
-                                                  << sign_F << rint_F  << abs_F  << min_F   << max_F   << sum_F
-                                                  << avg_F << fmod_F;
+const QStringList builInFunctions = QStringList() << degTorad_F
+                                                  << radTodeg_F
+                                                  << sin_F
+                                                  << cos_F
+                                                  << tan_F
+                                                  << asin_F
+                                                  << acos_F
+                                                  << atan_F
+                                                  << sinh_F
+                                                  << cosh_F
+                                                  << tanh_F
+                                                  << asinh_F
+                                                  << acosh_F
+                                                  << atanh_F
+                                                  << sinD_F
+                                                  << cosD_F
+                                                  << tanD_F
+                                                  << asinD_F
+                                                  << acosD_F
+                                                  << atanD_F
+                                                  << log2_F
+                                                  << log10_F
+                                                  << log_F
+                                                  << ln_F
+                                                  << exp_F
+                                                  << sqrt_F
+                                                  << sign_F
+                                                  << rint_F
+                                                  << r2cm_F
+                                                  << abs_F
+                                                  << min_F
+                                                  << max_F
+                                                  << sum_F
+                                                  << avg_F
+                                                  << fmod_F;
 
 // Postfix operators
 const QString cm_Oprt = QStringLiteral("cm");
